--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,22 @@
     android:layout_height="match_parent"
     tools:context="com.lgx.weatherforecast.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/main_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        app:layout_constraintBottom_toTopOf="@id/main_tab_layout" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/main_tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:background="#323232"
         app:layout_constraintBottom_toBottomOf="parent"
         app:tabTextColor="#9A9A9A"
         app:tabSelectedTextColor="#3CACFF"
-        app:tabIndicatorHeight="0dp"
-        app:tabPadding="3dp">
+        app:tabIndicatorHeight="0dp">
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,12 +40,5 @@
             android:icon="@drawable/main_tab_personal"
             android:text="@string/main_tab_personal"/>
     </android.support.design.widget.TabLayout>
-
-    <FrameLayout
-        android:id="@+id/main_content"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintVertical_weight="1"
-        app:layout_constraintBottom_toTopOf="@id/main_tab_layout" />
 
 </android.support.constraint.ConstraintLayout>
