--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="WelcomeTheme" parent="AppTheme">
-        <item name="android:windowBackground">@drawable/welcome_bg</item>
+        <item name="android:windowBackground">@drawable/welcome_theme_bg</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
     </style>
