--- a/news/src/main/res/layout/fragment_news_main.xml
+++ b/news/src/main/res/layout/fragment_news_main.xml
@@ -13,4 +13,28 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
+    <android.support.design.widget.TabLayout
+        android:id="@+id/main_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/app_navigator_back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:tabTextColor="@color/app_navigator_unchecked"
+        app:tabSelectedTextColor="@color/app_navigator_check"
+        app:tabIndicatorHeight="0dp">
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/main_tab_weather"/>
+
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/main_tab_news"/>
+
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/main_tab_personal"/>
+    </android.support.design.widget.TabLayout>
 </android.support.constraint.ConstraintLayout>
