--- a/forecast/src/main/res/layout/fragment_forecast_main.xml
+++ b/forecast/src/main/res/layout/fragment_forecast_main.xml
@@ -2,7 +2,12 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/page_back"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <View
+        android:layout_width="300dp"
+        android:layout_height="5dp"
+        android:background="@color/colorAccent"/>
 
     <TextView
         android:layout_width="wrap_content"
