--- a/news/src/main/res/layout/fragment_news_main.xml
+++ b/news/src/main/res/layout/fragment_news_main.xml
@@ -2,39 +2,24 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/page_back"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="新闻首页"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
     <android.support.design.widget.TabLayout
-        android:id="@+id/main_tab_layout"
+        android:id="@+id/news_main_tab"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/app_navigator_back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:tabTextColor="@color/app_navigator_unchecked"
-        app:tabSelectedTextColor="@color/app_navigator_check"
-        app:tabIndicatorHeight="0dp">
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tab_weather"/>
+        android:background="@color/page_back"
+        app:tabMode="scrollable"
+        app:tabTextColor="@color/text_light"
+        app:tabSelectedTextColor="@color/text_deep"/>
 
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tab_news"/>
 
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tab_personal"/>
-    </android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/news_main_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/news_main_tab"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </android.support.constraint.ConstraintLayout>
