--- a/news/src/main/res/layout/fragment_news_main.xml
+++ b/news/src/main/res/layout/fragment_news_main.xml
@@ -8,13 +8,22 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/news_main_tab"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="48dp"
         android:background="@color/page_back"
         app:tabMode="scrollable"
         app:tabTextColor="@color/text_light"
-        app:tabSelectedTextColor="@color/text_deep"/>
+        app:tabSelectedTextColor="@color/text_deep"
+        app:tabIndicatorHeight="1dp"
+        app:tabIndicatorColor="@color/text_deep"
+        app:tabMinWidth="20dp"
+        app:tabPaddingStart="12dp"
+        app:tabPaddingEnd="12dp"/>
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/text_light"
+        app:layout_constraintTop_toBottomOf="@id/news_main_tab"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/news_main_content"
